Fix alignment

--- a/themes/pelican-hss/static/css/style.css
+++ b/themes/pelican-hss/static/css/style.css
@@ -44,6 +44,9 @@ div#comments {
     padding-top: 5em;
 }
 
+div#archives {
+    text-align: center;
+}
 
 /*
 ^ Manually insterted ^
